# w26-201b

./: .env.example  .gitignore  .quartoignore  AGENTS.md  CLAUDE.md  CNAME  PEDAGOGY.md  README.md  _quarto.yml  glossary.qmd  glossary.yml  index.qmd  pyproject.toml  schedule.qmd
docs/: glossary.html  index.html  references.html  schedule.html  search.json
docs/assets/: custom.css
docs/guides/: classroom-guide.html  debugging-guide.html  formulas.html  git-guide.html  linear-algebra.html  python-guide.html  python-resources.html  terminology.html
docs/weeks/01/: index.html
docs/weeks/01/lab/: index.html  polars-crash-course.html  python-fundamentals.html
docs/weeks/02/: index.html  stat-foundations.html
docs/weeks/02/hw/: index.html
docs/weeks/02/lab/: eda-workflows.html  seaborn-crash-course.html
docs/weeks/03/: index.html
docs/weeks/04/: index.html
docs/weeks/final/: project.html
guides/: classroom-guide.qmd  debugging-guide.qmd  formulas.qmd  git-guide.qmd  linear-algebra.qmd  python-guide.qmd  python-resources.qmd  terminology.qmd
weeks/01/: index.qmd
weeks/01/lab/: index.qmd  polars-crash-course.qmd  python-fundamentals.qmd
weeks/02/: index.qmd  stat-foundations.qmd
weeks/02/hw/: index.qmd
weeks/02/lab/: eda-workflows.qmd  seaborn-crash-course.qmd
weeks/02/slides/: 01-12-foundations.md
weeks/03/: index.qmd
weeks/03/notebooks/: clt.py  relationships.py  simulation.py
weeks/04/: index.qmd
weeks/final/: project.qmd
